<resources>
    <string name="app_name">OurTravelMap</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data">Data</string>
    <string name="title_activity_data">DataActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="data_edit_text">Edit</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="title">Title</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="content">Content</string>
    <string name="chooseButton">Choose Date</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="map">Map</string>
</resources>